// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffe Mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar la imagen del producto 1`] = `
<img
  alt="Coffe Mug"
  className="productImg custom-class"
  src="./coffee-mug.png"
/>
`;
